Added Documentation Link to podspec and updated README file

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,5 +1,5 @@
 use_frameworks!
 
 target 'ios-objc-foundation-nmxcore Example' do
-    pod 'Namics-Library', :path => '../'
+    pod 'NMXCore', :path => '../'
 end
