--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -5,11 +5,11 @@ objc: true
 sdk: iphonesimulator
 #sdk: iphone
 umbrella_header: Header-ios-objc-foundation-nmxcore.h
-framework_root: Development/ios-objc-foundation-nmxcore.xcodeproj
+framework_root: Development/NMXCore.xcodeproj
 author: Namics AG
 author_url: https://namics.com
 module: NamicsLib
 module_version: 1.0
 copyright: "2016-present © Namics AG"
 github_url: https://git.namics.com/namics/namics-core-library-ios-objective-c/
-#xcodebuild_arguments: [clean,build,-project,ios-objc-foundation-nmxcore.xcodeproj,-target,ios-objc-foundation-nmxcore,-scheme,ios-objc-foundation-nmxcore]
+#xcodebuild_arguments: [clean,build,-project,NMXCore.xcodeproj,-target,NMXCore,-scheme,NMXCore]
