--- a/Development/NMXCore.xcodeproj/xcshareddata/xcschemes/NMXCoreTests.xcscheme
+++ b/Development/NMXCore.xcodeproj/xcshareddata/xcschemes/NMXCoreTests.xcscheme
@@ -50,20 +50,6 @@
             ReferencedContainer = "container:NMXCore.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <CommandLineArguments>
-         <CommandLineArgument
-            argument = ""
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = ""
-            isEnabled = "NO">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = ""
-            isEnabled = "NO">
-         </CommandLineArgument>
-      </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "destination"
@@ -85,21 +71,13 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2164DEC21F98FB290081CFDD"
-            BuildableName = "NMXCoreTests.xctest"
-            BlueprintName = "NMXCoreTests"
-            ReferencedContainer = "container:NMXCore.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <CommandLineArguments>
-         <CommandLineArgument
-            argument = ""
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "destination"
+            value = "platform=iOS Simulator,name=iPhone 7,OS=11"
             isEnabled = "YES">
-         </CommandLineArgument>
-      </CommandLineArguments>
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
