Added Tests to Build Targets for Libs for Continous Integration

--- a/Development/NMXCore.xcodeproj/xcshareddata/xcschemes/NMXCoreStatic.xcscheme
+++ b/Development/NMXCore.xcodeproj/xcshareddata/xcschemes/NMXCoreStatic.xcscheme
@@ -27,9 +27,29 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       language = ""
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "21A112C21FA2322C00C1CD83"
+               BuildableName = "NMXCoreTestsStatic.xctest"
+               BlueprintName = "NMXCoreTestsStatic"
+               ReferencedContainer = "container:NMXCore.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "21A112AE1FA22FBA00C1CD83"
+            BuildableName = "libNMXCoreStatic.a"
+            BlueprintName = "NMXCoreStatic"
+            ReferencedContainer = "container:NMXCore.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
