--- a/Development/NMXCore.xcodeproj/xcshareddata/xcschemes/NMXCoreTests.xcscheme
+++ b/Development/NMXCore.xcodeproj/xcshareddata/xcschemes/NMXCoreTests.xcscheme
@@ -71,6 +71,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "2164DEC21F98FB290081CFDD"
+            BuildableName = "NMXCoreTests.xctest"
+            BlueprintName = "NMXCoreTests"
+            ReferencedContainer = "container:NMXCore.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "destination"
