Fixing Profiling Issue and made Profiling available for Static Lib Target

--- a/Development/NMXCore.xcodeproj/xcshareddata/xcschemes/NMXCoreStatic.xcscheme
+++ b/Development/NMXCore.xcodeproj/xcshareddata/xcschemes/NMXCoreStatic.xcscheme
@@ -77,20 +77,21 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "21A112AE1FA22FBA00C1CD83"
-            BuildableName = "libNMXCoreStatic.a"
-            BlueprintName = "NMXCoreStatic"
+            BlueprintIdentifier = "21D32F6A1FA1C03700479607"
+            BuildableName = "Demo.app"
+            BlueprintName = "Demo"
             ReferencedContainer = "container:NMXCore.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
