--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ os: osx
 language: objective-c
 osx_image: xcode9.1
 xcode_project: Development/NMXCore.xcodeproj
-xcode_scheme: [NMXCore,NMXCoreTests,NMXCoreTestsStatic]
+xcode_scheme: [NMXCoreTests,NMXCoreTestsStatic]
 script: ./build.sh
