--- a/Development/NMXCore.xcodeproj/xcshareddata/xcschemes/NMXCoreTests.xcscheme
+++ b/Development/NMXCore.xcodeproj/xcshareddata/xcschemes/NMXCoreTests.xcscheme
@@ -29,6 +29,15 @@
       language = ""
       shouldUseLaunchSchemeArgsEnv = "NO"
       codeCoverageEnabled = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "xcodebuild -workspace &quot;${WORKSPACE_PATH}&quot; -scheme NMXCore archive">
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <Testables>
          <TestableReference
             skipped = "NO">
