--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ osx_image: xcode9.1
 xcode_project: Development/NMXCore.xcodeproj
 xcode_scheme: [NMXCoreTests,NMXCoreTestsStatic]
 script: ./build.sh
+install: bundle install --without=documentation --path ../travis_bundle_dir
+after_success: slather
