--- a/.slather.yml
+++ b/.slather.yml
@@ -2,3 +2,4 @@ ci_service: travis_ci
 coverage_service: coveralls
 xcodeproj: Development/NMXCore.xcodeproj
 source_directory: NMXCore
+scheme: NMXCoreTests
