--- a/.slather.yml
+++ b/.slather.yml
@@ -2,7 +2,7 @@ ci_service: travis_ci
 coverage_service: coveralls
 xcodeproj: Development/NMXCore.xcodeproj
 source_directory: NMXCore
-scheme: NMXCoreStatic
+scheme: NMXCoreTestsStatic
 ignore:
 - "Development/NMXCoreTests/*"
 - "Development/NMXCoreTestsStatic/*"
